# byonk

./: .dockerignore  .editorconfig  .gitignore  CHANGES.md  CLAUDE.md  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.release  Makefile  README.md  SECURITY.md  config.yaml  default-config.yaml  google-config.yaml  hacs.json  pyproject.toml  reddit-post.md  repository.yaml  requirements_test.txt
.github/scripts/: manage-doc-versions.sh
.github/workflows/: ci.yml  docs.yml  release.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  color-dither-bug.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
crates/eink-dither/: Cargo.toml  build.rs
custom_components/byonk/: __init__.py  addon.py  api.py  button.py  config_flow.py  const.py  coordinator.py  entity.py  manifest.json  name_sync.py  number.py  package_entities.py  param_entities.py  param_form.py  repairs.py  screen_repo_entities.py  select.py  sensor.py  strings.json  switch.py  text.py
data/: config.yaml
data/screens/: floerli.lua  graytest.lua  transit.lua
docs/: .gitignore  HANDOVER.md  book.toml  generate-samples.sh  package-lock.json  package.json  rspress.config.ts  tsconfig.json
docs/content/: _meta.json  index.mdx
docs/scripts/: generate-api-docs.ts  generate-samples.sh
docs/src/: README.md  SUMMARY.md
docs/superpowers/: ha-publishing.md
docs/theme/: mermaid-init.js  version-selector.css  version-selector.js
fonts/: FONTS.md  x11-importer.py
homeassistant/brands/: rasterize.sh
homeassistant/byonk/: CHANGELOG.md  DOCS.md  config.yaml
screens/: byonk-screens.yaml  default.lua  floerli.lua  fontdemo-bitmap.lua  gphoto.lua  graytest.lua  hello.lua  hintdemo.lua  mandelbrot.lua  transit.lua
screens/default/: meta.yaml
src/: addon_options.rs  assets.rs  error.rs  lib.rs  main.rs  server.rs
src/api/: dev.rs  display.rs  headers.rs  log.rs  mod.rs  setup.rs  time.rs
src/models/: compat.rs  config.rs  device.rs  display_spec.rs  mod.rs  package_manifest.rs  param_schema.rs  screen_meta.rs  screen_repo_manifest.rs
src/rendering/: blue_noise.rs  dither.rs  mod.rs  svg_to_png.rs
src/services/: config_writer.rs  content_cache.rs  content_pipeline.rs  content_provider.rs  device_registry.rs  file_watcher.rs  git_fetch.rs  http_cache.rs  lua_runtime.rs  mod.rs  package_cache.rs  package_loader.rs  package_manager.rs  package_status.rs  renderer.rs  screen_repo_cache.rs  screen_repo_loader.rs  screen_repo_manager.rs  screen_repo_status.rs  template_service.rs  url_signer.rs
static/dev/: dev.css  dev.js  index.html
tests/: addon_manifest_test.rs  addon_options_test.rs  admin_devices_test.rs  admin_packages_test.rs  admin_read_test.rs  admin_screen_repos_test.rs  admin_screens_test.rs  admin_write_test.rs  api_display_test.rs  api_image_test.rs  api_log_test.rs  api_setup_test.rs  builtin_package.rs  e2e_flow_test.rs  lua_api_test.rs  screen_schemas_test.rs  server_integration_test.rs
tests/common/: app.rs  assertions.rs  fixtures.rs  mock_https_server.rs  mock_server.rs  mod.rs
tests_ha/: conftest.py  test_addon.py  test_api.py  test_config_flow.py  test_default_device.py  test_device_entry.py  test_device_flow.py  test_init.py  test_manifest.py  test_name_sync.py  test_number.py  test_options_flow.py  test_package_button.py  test_package_delete_propagation.py  test_package_reconcile.py  test_package_status.py  test_package_subentry_flow.py  test_param_entities.py  test_param_form.py  test_pending_sensor.py  test_reauth.py  test_reconcile.py  test_refresh.py  test_repairs.py  test_runtime_subentry.py  test_screen_repo_button.py  test_screen_repo_issues.py  test_screen_repo_status.py  test_select.py  test_sensor.py  test_settings_entities.py  test_subentry_flow.py
tools/ha-vm/: README.md  deploy.sh  (+5 more)
(+152 files in other folders)
