[package]
name = "byonk"
version = "0.6.1"
edition = "2021"
description = "Byonk (Bring Your Own Ink) - SVG-based content server for TRMNL e-ink devices"
license = "MIT"

[dependencies]
# HTTP server
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace"] }

# Rendering
resvg = "0.46"
tiny-skia = "0.11"
png = "0.17"
fontdb = "0.23"

# Scripting & Templating
mlua = { version = "0.10", features = ["lua54", "vendored"] }
tera = "1"
scraper = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# OpenAPI documentation
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }

# Error handling
thiserror = "2"
anyhow = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
async-trait = "0.1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Asset embedding
rust-embed = { version = "8", features = ["include-exclude"] }
base64 = "0.22"
regex = "1"
fast_qr = { version = "0.13", features = ["svg"] }

[patch.crates-io]
# Use our patched resvg with variable font support
# https://github.com/oetiker/resvg
resvg = { git = "https://github.com/oetiker/resvg.git", branch = "skrifa" }
usvg = { git = "https://github.com/oetiker/resvg.git", branch = "skrifa" }
fontdb = { git = "https://github.com/oetiker/resvg.git", branch = "skrifa" }
